--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -21,8 +21,6 @@
 <resources>
     <!-- MainActivity -->
     <string name="info">Info</string>
-    <string name="install">Instalar</string>
-    <string name="install_summary">Aperte para instalar o LSPosed</string>
     <string name="Modules">Módulos</string>
     <plurals name="modules_enabled_count">
         <item quantity="one">%d módulo ativo</item>
@@ -35,18 +33,23 @@
     <string name="module_repo_summary">Repositório de Módulos (Beta)</string>
     <string name="about_view_source_code"><![CDATA[Veja o código fonte no %1$s<br/>Entre em nosso canal no %2$s]]></string>
     <string name="about_translators">Tradutor: %s</string>
+    <string name="translators"><![CDATA[<a href="https://forum.xda-developers.com/m/vd171.4699873/#about">VD171</a>]]></string>
 
-    <string name="activated">Ativado</string>
+    <string name="install">Instalar</string>
+    <string name="install_summary">Aperte para instalar o LSPosed</string>
     <string name="not_installed">Não instalado</string>
+    <string name="not_install_summary">LSPosed não está instalado</string>
+    <string name="activated">Ativado</string>
     <string name="partial_activated">Parcialmente ativado</string>
-    <string name="need_update">Necessário atualizar</string>
     <string name="selinux_policy_not_loaded_summary">SEPolicy não está carregado corretamente</string>
     <string name="selinux_policy_not_loaded"><![CDATA[<b>AVISO:</b> SEPolicy não está carregado corretamente, módulos que aplicam hooks do Framework do Sistema não funcionarão.<br/>Por favor, relate isso para o desenvolvedor do <a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a>.]]></string>
     <string name="system_inject_fail_summary">A injeção do Framework do Sistema falhou</string>
     <string name="system_inject_fail"><![CDATA[<b>AVISO:</b> Falha na injeção do Framework do Sistema<br/>Isso é raro e pode ter sido causado pelo <b>Magisk</b> ou por algum módulo do Magisk de baixa qualidade.<br/>Por favor, tente desabilitar os módulos do Magisk que não sejam o Riru e o LSPosed ou envie o log completo para os desenvolvedores.]]></string>
     <string name="system_prop_incorrect_summary">Propriedade do sistema incorreta</string>
     <string name="system_prop_incorrect"><![CDATA[<b>AVISO:</b> Propriedade do sistema incorreta.<br/>Algumas propriedades do sistema necessárias foram excluídas ou modificadas.<br/>Algum módulo pode ser invalidado ocasionalmente.]]></string>
+    <string name="need_update">Necessário atualizar</string>
     <string name="please_update_summary">Por favor, instale a versão mais recente do LSPosed</string>
+    <string name="lsposed_not_active">O módulo do LSPosed não está instalado ou está desativado.</string>
     <string name="info_api_version">Versão da API</string>
     <string name="info_framework_version">Versão do Framework</string>
     <string name="info_manager_version">Versão do App</string>
@@ -57,7 +60,7 @@
     <!-- LogsActivity -->
     <string name="menuSend">Enviar</string>
     <string name="menuSaveToSd">Salvar</string>
-    <string name="nav_item_logs_lsp">Registros Detalhados</string>
+    <string name="nav_item_logs_lsp">Registros LSPosed</string>
     <string name="nav_item_logs_module">Registros dos Módulos</string>
     <string name="dont_show_again">Não mostrar novamente</string>
     <string name="logs_save_failed">Falha ao salvar:</string>
@@ -69,7 +72,7 @@
     <string name="logs_cannot_read">Não foi possível ler o registro: \n</string>
     <string name="menuReload">Recarregar</string>
     <string name="logs_clear_failed_2">Falha ao limpar o registro</string>
-    <string name="not_logcat_2">Se alguém lhe perguntou pelo Logcat do Android, você está na seção errada. Este é o registro do LSPosed; se você precisa do logcat, no XDA você pode encontrar o que precisa.</string>
+    <string name="verbose_log_not_avaliable">O registro detalhado não está disponível, se você apenas ativou sem reiniciar, tente novamente após reiniciar.</string>
 
     <!-- Notification -->
     <string name="module_is_not_activated_yet">O módulo do Xposed ainda não está ativo</string>
@@ -90,6 +93,7 @@
     <string name="module_uninstall_message">Você quer desinstalar este módulo?</string>
     <string name="module_uninstalled">Desinstalado %1$s</string>
     <string name="module_uninstall_failed">Falha ao desinstalar</string>
+    <string name="add_module_to_user">Adicionar módulo ao usuário</string>
     <string name="module_installed">Adicionado %1$s ao usuário %2$s</string>
     <string name="module_install_failed">Falha ao adicinar módulo</string>
     <string name="install_to_user">Instalar ao usuário %s</string>
@@ -98,16 +102,17 @@
     <!-- AppListActivity -->
     <string name="compile_speed">Re-otimizar</string>
     <string name="compile_speed_msg">Otimizando…</string>
-    <string name="compile_done">Otimização completa.</string>
+    <string name="compile_done">Otimização completa</string>
     <string name="app_launch">Abrir</string>
-    <string name="compile_failed">A otimização falhou ou não houve nenhum retorno.</string>
+    <string name="compile_failed">A otimização falhou: não houve nenhum retorno.</string>
     <string name="compile_failed_with_info">Falha na otimização: </string>
-    <string name="sort_by_name">Ordenar pelo nome do aplicativo</string>
-    <string name="sort_by_package_name">Ordenar pelo nome do pacote</string>
-    <string name="sort_by_install_time">Ordenar pela data de instalação</string>
-    <string name="sort_by_update_time">Ordenar pela data de atualização</string>
+    <string name="sort_by_name">Nome do app</string>
+    <string name="sort_by_package_name">Nome do pacote</string>
+    <string name="sort_by_install_time">Data de instalação</string>
+    <string name="sort_by_update_time">Data de atualização</string>
+    <string name="sort_reverse">Reverso</string>
     <string name="menu_show_system_apps">Apps do Sistema</string>
-    <string name="menu_sort">Ordenar…</string>
+    <string name="menu_sort">Ordenar</string>
     <string name="enable_module">Ativar módulo</string>
     <string name="no_scope_selected">Você não selecionou nenhum app. Quer continuar?</string>
     <string name="menu_show_games">Jogos</string>
@@ -121,7 +126,7 @@
     <string name="update_available">Atualização disponível: %1$s</string>
     <string name="module_disabled_no_selection">O módulo %s foi desativado porque nenhum app foi selecionado.</string>
     <string name="android_framework">Framework do Sistema</string>
-    <string name="menu_backup_and_restore">Backup…</string>
+    <string name="menu_backup_and_restore">Backup</string>
     <string name="menu_backup">Fazer backup</string>
     <string name="menu_restore">Restaurar backup</string>
     <string name="force_stop">Forçar parada</string>
@@ -129,11 +134,12 @@
     <string name="force_stop_dlg_text">Se forçar a parada de um app, ele pode apresentar mau funcionamento.</string>
     <string name="reboot_required">Necessário reiniciar para aplicar alteração</string>
     <string name="reboot">Reiniciar</string>
-    <string name="menu_hide">Esconder…</string>
+    <string name="menu_hide">Esconder</string>
 
     <!-- ModulesActivity and AppListActivity -->
     <string name="modules_other_app">Ver em outro app</string>
     <string name="module_app_info">Info do App</string>
+    <string name="list_empty">¯\\\\_(ツ)_\/¯\nNada encontrado</string>
 
     <!-- SettingsActivity -->
     <string name="settings_group_framework">Framework</string>
@@ -160,7 +166,7 @@
     <string name="theme_color_summary">Cor que aparece com mais frequência no app</string>
     <string name="theme_color_system_accent">Cor de realce do sistema</string>
     <string name="settings_show_hidden_icon_apps_enabled">Forçar apps à exibirem ícones do lançador</string>
-    <string name="settings_show_hidden_icon_apps_enabled_summary">Após o Android 10, alguns aplicativos (especialmente alguns módulos do Xposed) não estão autorizados à ocultarem seus ícones do lançador. Desative esta opção para desligar este recurso.</string>
+    <string name="settings_show_hidden_icon_apps_enabled_summary">Após o Android 10, alguns aplicativos não estão autorizados à ocultarem seus ícones do lançador. Desative esta opção para desligar este recurso do sistema.</string>
     <string name="settings_group_system">Sistema</string>
 
     <!-- Module Repo -->
@@ -177,14 +183,11 @@
     <string name="module_release_no_more">Não há mais versões</string>
     <string name="repo_load_failed">Falha ao carregar o repositório de módulos: %s</string>
 
+    <!-- CrashReportActivity -->
     <string name="app_destroyed">Este app foi destruído, certifique-se de que você baixou da fonte oficial.</string>
-    <string name="outdated_manager">A versão do app do LSPosed e do módulo do LSPosed são inconsistentes. Por favor, reinstale a versão correspondente.</string>
-    <string name="lsposed_not_active">O módulo do LSPosed não está instalado ou está desativado.</string>
-    <string name="verbose_log_not_avaliable">O registro detalhado não está disponível. Se você ativou e ainda não reiniciou, tente novamente após reiniciar.</string>
-    <string name="NotInstall">Não instalado</string>
-    <string name="not_install_summary">LSPosed não está instalado</string>
-    <string name="translators"><![CDATA[<a href="https://forum.xda-developers.com/m/vd171.4699873/#about">VD171</a>]]></string>
+    <string name="outdated_core">O app do LSPosed é mais recente que o framework. Por favor, atualize o framework do LSPosed.</string>
+    <string name="outdated_manager">O framework do LSPosed é mais recente que o app. Por favor, atualize o app manualmente em /data/adb/lspd/manager.apk.</string>
+    <string name="manager_crashed">Gerenciador travou</string>
+    <string name="cpoy_crash_info">Copiar detalhes do travamento</string>
     <string name="copy_toast_msg">Copiado</string>
-    <string name="list_empty">¯\\\\_(ツ)_\/¯\nNada encontrado</string>
-    <string name="add_module_to_user">Adicionar módulo ao usuário</string>
 </resources>
