--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,12 +77,14 @@
     <!-- Notification -->
     <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
     <string name="module_is_not_activated_yet_detailed">%s has been installed, but is not activated yet</string>
-    <string name="xposed_module_updated_notification_content">%s has been updated</string>
+    <string name="xposed_module_updated_notification_title">Xposed module updated</string>
+    <string name="xposed_module_updated_notification_content">%s has been updated, please force stop and restart apps in its scope</string>
+    <string name="xposed_module_updated_notification_title_system">Xposed module updated, system reboot required</string>
+    <string name="xposed_module_updated_notification_content_system">%s has been updated, since the scope contains System Framework, required reboot to apply changes</string>
 
     <!-- ModulesActivity -->
     <string name="module_empty_description">(no description provided)</string>
     <string name="module_no_ui">This module does not provide a user interface</string>
-    <string name="xposed_module_updated_notification_title">Xposed module updated</string>
     <string name="warning_xposed_min_version">This module requires a newer Xposed version (%d) and thus cannot be activated</string>
     <string name="no_min_version_specified">This module does not specify the Xposed version it needs.</string>
     <string name="warning_min_version_too_low">This module was created for Xposed version %1$d, but due to incompatible changes in version %2$d, it has been disabled</string>
