--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,7 +21,7 @@
 <resources>
     <!-- MainActivity -->
     <string name="info">Информация</string>
-    <string name="Modules">Модули</string>
+    <string name="Modules">Мои модули</string>
     <plurals name="modules_enabled_count">
         <item quantity="one">Включен %d модуль</item>
         <item quantity="few">Включены %d модуля</item>
@@ -79,12 +79,14 @@
     <!-- Notification -->
     <string name="module_is_not_activated_yet">Модуль еще не включен</string>
     <string name="module_is_not_activated_yet_detailed">Модуль %s установлен но не включен</string>
-    <string name="xposed_module_updated_notification_content">Модуль %s обновлен</string>
+    <string name="xposed_module_updated_notification_title">Модуль обновлен</string>
+    <string name="xposed_module_updated_notification_content">%s обновлен, остановите и запустите приложения выбранные для модуля</string>
+    <string name="xposed_module_updated_notification_title_system">Модуль обновлен, требуется перезагрузка</string>
+    <string name="xposed_module_updated_notification_content_system">%s обновлен, так как выбран системный Framework для модуля, требуется перезагрузка для применения изменений</string>
 
     <!-- ModulesActivity -->
     <string name="module_empty_description">(описание отсутствует)</string>
     <string name="module_no_ui">Этот модуль не содержит пользовательского интерфейса</string>
-    <string name="xposed_module_updated_notification_title">Модуль обновлен</string>
     <string name="warning_xposed_min_version">Этот модуль требует более новой версии LSPosed (%d) и не может быть включен</string>
     <string name="no_min_version_specified">Этот модуль не указал версию LSPosed, в которой он нуждается</string>
     <string name="warning_min_version_too_low">Этот модуль был создан для LSPosed версии %1$d, но из-за несовместимых изменений в версии %2$d, он был выключен</string>
@@ -119,7 +121,7 @@
     <string name="no_scope_selected">Вы не выбрали ни одного приложения. Продолжить?</string>
     <string name="menu_show_games">Игры</string>
     <string name="menu_show_modules">Модули</string>
-    <string name="failed_to_save_scope_list">Не удалось сохранить список областей</string>
+    <string name="failed_to_save_scope_list">Не удалось сохранить список включенных приложений для модуля</string>
     <string name="app_description">%1$s\nВерсия: %2$s</string>
     <string name="use_recommended">Рекомендуемые</string>
     <string name="no_scope_selected_has_recommended">Вы не выбрали ни одного приложения. Выбрать рекомендуемые приложения?</string>
@@ -152,7 +154,7 @@
     <string name="pure_black_dark_theme_summary">Использовать черную тему, когда включена темная</string>
     <string name="settings_group_theme">Тема</string>
     <string name="settings_backup_and_restore">Резервное копирование и восстановление</string>
-    <string name="settings_backup_and_restore_summery">Списка модулей и областей</string>
+    <string name="settings_backup_and_restore_summery">Списка модулей и включенных приложений для модуля</string>
     <string name="settings_backup">Создать</string>
     <string name="settings_backuping">Резервное копирование…</string>
     <string name="settings_backup_success">Резервное копирование завершено!</string>
